# yolo-ocr

./: .gitignore  main.py  pyproject.toml  requirements.txt
nb/: yolo+ocr.ipynb
