[tool.poetry]
name = "yolo+ocr"
version = "0.1.0"
description = ""
authors = ["roger <bian14r.tech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.9"
numpy = ">=1.23.5"
torch = "1.11"
torchvision = ">=0.9.0"
scipy = ">=1.4.1"
pandas = ">=1.1.4"
opencv-python = ">=4.1.1"
notebook = "^7.2.1"
matplotlib = ">=3.3"
gitpython = ">=3.1.30"
pillow = ">=10.3.0"
psutil = "^5.9.8"
pyyaml = ">=5.3.1"
requests = ">=2.32.0"
thop = ">=0.1.1"
tqdm = ">=4.64.0"
ultralytics = ">=8.0.232"
seaborn = ">=0.11.0"
setuptools = ">=65.5.1"
wheel = ">=0.38.0"
easyocr = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
